--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link ref="stylesheet" href="/src/styles.css" />
-    <title>Homepage</title>
+    <link ref="stylesheet" href="/css/styles.css" />
+    <title>Contact</title>
   </head>
-  <body>
-    <a href="/index.html"> Home</a>
-    <a href="/contact.html">Contact me</a>
-    <a href="/photo.html">Photo</a>
-  </body>
+  <body></body>
 </html>
