added info about

--- a/contact.html
+++ b/contact.html
@@ -7,5 +7,10 @@
     <link ref="stylesheet" href="/css/styles.css" />
     <title>Contact</title>
   </head>
-  <body></body>
+  <body>
+    <p>
+      Croissant Day is celebrated on 30 January each year. It’s a day that gives
+      everyone an excuse to enjoy this beloved flaky treat
+    </p>
+  </body>
 </html>
