--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Homepage</title>
   </head>
   <body>
+    <p>
+      A croissant is a light flaky,and buttery viennoiserie pastry. It is named
+      for its historical crescent shape. A croissant is made of a layered
+      yeast-leavened dough. The dough is layered with butter, rolled and folded
+      several times in succession, then rolled into a sheet, in a technique
+      called laminating.
+    </p>
     <a href="/index.html"> Home</a>
     <a href="/contact.html">Contact me</a>
     <a href="/photo.html">Photo</a>
