added links between pages

--- a/contact.html
+++ b/contact.html
@@ -12,5 +12,6 @@
       Croissant Day is celebrated on 30 January each year. It’s a day that gives
       everyone an excuse to enjoy this beloved flaky treat
     </p>
+    <a href="/index.html"> Home</a>
   </body>
 </html>
