added links and css background and centering

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,8 @@
   <body>
     <p>
       Croissant Day is celebrated on 30 January each year. It’s a day that gives
-      everyone an excuse to enjoy this beloved flaky treat
+      everyone an excuse to enjoy this beloved flaky treat I f you want to eat
+      me, write to <a href="mailto:croissant@gmail.com">croissant@gmail.com</a>
     </p>
     <a href="/index.html"> Home</a>
   </body>
