--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Homepage</title>
   </head>
   <body>
+    <h1>Croissant is tasty!</h1>
     <p>
       A croissant is a light flaky,and buttery viennoiserie pastry. It is named
       for its historical crescent shape. A croissant is made of a layered
