--- a/photo.html
+++ b/photo.html
@@ -8,6 +8,7 @@
     <title>Photo</title>
   </head>
   <body>
+    <h1>That's how I look like</h1>
     <img src="src/croissant.png" />
 
     <a href="/index.html"> Home</a>
