added boostrap and styling

--- a/index.html
+++ b/index.html
@@ -5,19 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link ref="stylesheet" href="/src/styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
     <title>Homepage</title>
   </head>
   <body>
-    <h1>Croissant is tasty!</h1>
-    <p>
-      A croissant is a light flaky,and buttery viennoiserie pastry. It is named
-      for its historical crescent shape. A croissant is made of a layered
-      yeast-leavened dough. The dough is layered with butter, rolled and folded
-      several times in succession, then rolled into a sheet, in a technique
-      called laminating.
-    </p>
-    <a href="/index.html"> Home</a>
-    <a href="/contact.html">Contact me</a>
-    <a href="/photo.html">Photo</a>
+    <div class="container">
+      <div class="bg-success bg-opacity-25">
+        <h1>Croissant is tasty!</h1>
+        <p>
+          A croissant is a light flaky,and buttery viennoiserie pastry. It is
+          named for its historical crescent shape. A croissant is made of a
+          layered yeast-leavened dough. The dough is layered with butter, rolled
+          and folded several times in succession, then rolled into a sheet, in a
+          technique called laminating.
+        </p>
+        <div class="d-flex justify-content-evenly">
+          <a href="/index.html"> Home</a>
+          <a href="/contact.html">Contact me</a>
+          <a href="/photo.html">Photo</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
