--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link ref="stylesheet" href="/css/styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
     <title>Contact</title>
   </head>
   <body>
-    <p>
-      Croissant Day is celebrated on 30 January each year. It’s a day that gives
-      everyone an excuse to enjoy this beloved flaky treat I f you want to eat
-      me, write to <a href="mailto:croissant@gmail.com">croissant@gmail.com</a>
-    </p>
-    <a href="/index.html"> Home</a>
+    <div class="container">
+      <div class="bg-success bg-opacity-25">
+        <p>
+          Croissant Day is celebrated on 30 January each year. It’s a day that
+          gives everyone an excuse to enjoy this beloved flaky treat I f you
+          want to eat me, write to
+          <a href="mailto:croissant@gmail.com">croissant@gmail.com</a>
+        </p>
+        <br />
+        <a href="/index.html"> Home</a>
+      </div>
+    </div>
   </body>
 </html>
