--- a/photo.html
+++ b/photo.html
@@ -5,12 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link ref="stylesheet" href="/css/styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
     <title>Photo</title>
   </head>
   <body>
-    <h1>That's how I look like</h1>
-    <img src="src/croissant.png" />
+    <div class="container">
+      <div class="bg-success bg-opacity-25">
+        <h1>That's how I look like</h1>
+        <img class="img-fluid" ыsrc="src/croissant.png" />
 
-    <a href="/index.html"> Home</a>
+        <a href="/index.html"> Home</a>
+      </div>
+    </div>
   </body>
 </html>
