--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,9 @@
     ></script>
     <title>Contact</title>
   </head>
-  <body>
+  <body class="bg-success bg-opacity-25">
     <div class="container">
-      <div class="bg-success bg-opacity-25">
+      <div class="d-flex">
         <p>
           Croissant Day is celebrated on 30 January each year. It’s a day that
           gives everyone an excuse to enjoy this beloved flaky treat I f you
