--- a/photo.html
+++ b/photo.html
@@ -18,11 +18,11 @@
     ></script>
     <title>Photo</title>
   </head>
-  <body>
+  <body class="bg-success bg-opacity-25">
     <div class="container">
-      <div class="bg-success bg-opacity-25">
+      <div class="d-flex">
         <h1>That's how I look like</h1>
-        <img class="img-fluid" ыsrc="src/croissant.png" />
+        <img class="img-fluid" src="src/croissant.png" />
 
         <a href="/index.html"> Home</a>
       </div>
