--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     ></script>
     <title>Homepage</title>
   </head>
-  <body>
+  <body class="bg-success bg-opacity-25">
     <div class="container">
-      <div class="bg-success bg-opacity-25">
+      <div class="d-flex">
         <h1>Croissant is tasty!</h1>
         <p>
           A croissant is a light flaky,and buttery viennoiserie pastry. It is
