--- a/contact.html
+++ b/contact.html
@@ -20,16 +20,14 @@
   </head>
   <body class="bg-success bg-opacity-25">
     <div class="container">
-      <div class="d-flex">
-        <p>
-          Croissant Day is celebrated on 30 January each year. It’s a day that
-          gives everyone an excuse to enjoy this beloved flaky treat I f you
-          want to eat me, write to
-          <a href="mailto:croissant@gmail.com">croissant@gmail.com</a>
-        </p>
-        <br />
-        <a href="/index.html"> Home</a>
-      </div>
+      <p>
+        Croissant Day is celebrated on 30 January each year. It’s a day that
+        gives everyone an excuse to enjoy this beloved flaky treat I f you want
+        to eat me, write to
+        <a href="mailto:croissant@gmail.com">croissant@gmail.com</a>
+      </p>
+      <br />
+      <a href="/index.html"> Home</a>
     </div>
   </body>
 </html>
