--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,9 @@
         <a href="mailto:croissant@gmail.com">croissant@gmail.com</a>
       </p>
       <br />
-      <a href="/index.html"> Home</a>
+      <div>
+        <a href="/index.html"> Home</a>
+      </div>
     </div>
   </body>
 </html>
