changed margin settings

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <title>Contact</title>
   </head>
   <body class="bg-success bg-opacity-25">
-    <div class="container">
+    <div class="container mt-5">
       <p>
         Croissant Day is celebrated on 30 January each year. It’s a day that
         gives everyone an excuse to enjoy this beloved flaky treat I f you want
@@ -27,9 +27,8 @@
         <a href="mailto:croissant@gmail.com">croissant@gmail.com</a>
       </p>
       <br />
-      <div>
-        <a href="/index.html"> Home</a>
-      </div>
+
+      <a href="/index.html"> Home</a>
     </div>
   </body>
 </html>
