--- a/photo.html
+++ b/photo.html
@@ -19,10 +19,10 @@
     <title>Photo</title>
   </head>
   <body class="bg-success bg-opacity-25">
-    <div class="container">
+    <div class="container mt-5">
       <h1>That's how I look like</h1>
       <img class="img-fluid" src="src/croissant.png" />
-
+      <br />
       <a href="/index.html"> Home</a>
     </div>
   </body>
