added links to photo and contact

--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,10 @@
         <a href="mailto:croissant@gmail.com">croissant@gmail.com</a>
       </p>
       <br />
-
-      <a href="/index.html"> Home</a>
+      <div class="d-flex justify-content-evenly">
+        <a href="/index.html"> Home</a>
+        <a href="/photo.html">Photo</a>
+      </div>
     </div>
   </body>
 </html>
