--- a/photo.html
+++ b/photo.html
@@ -23,7 +23,10 @@
       <h1>That's how I look like</h1>
       <img class="img-fluid" src="src/croissant.png" />
       <br />
-      <a href="/index.html"> Home</a>
+      <div class="d-flex justify-content-evenly">
+        <a href="/index.html"> Home</a>
+        <a href="/contact.html">Contact me</a>
+      </div>
     </div>
   </body>
 </html>
