--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Contact details to get some croissants" />
     <link ref="stylesheet" href="/css/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -16,9 +17,10 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
-    <title>Contact</title>
+    <title>Contact- Croissant.com</title>
   </head>
   <body class="bg-success bg-opacity-25">
+    <h1>To order croissants</h1>
     <div class="container mt-5">
       <p>
         Croissant Day is celebrated on 30 January each year. It’s a day that
