--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="What is croissant" />
     <link ref="stylesheet" href="/src/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -16,11 +17,14 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
-    <title>Homepage</title>
+    <title>Homepage - Croissant.com</title>
   </head>
   <body class="bg-success bg-opacity-25">
     <div class="container mt-5">
-      <h1>Croissant is tasty!</h1>
+      <h1>Croissant is tasty bakery product!</h1>
+      <a href="https://www.croissant.com" title="Croissant">
+        Learn more about croissant</a
+      >
       <p>
         A croissant is a light flaky,and buttery viennoiserie pastry. It is
         named for its historical crescent shape. A croissant is made of a
