--- a/photo.html
+++ b/photo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="How does croissant look like" />
     <link ref="stylesheet" href="/css/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -16,12 +17,12 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
-    <title>Photo</title>
+    <title>Photo - Croissant.com</title>
   </head>
   <body class="bg-success bg-opacity-25">
     <div class="container mt-5">
-      <h1>That's how I look like</h1>
-      <img class="img-fluid" src="src/croissant.png" />
+      <h1>That's how croissant look like</h1>
+      <img class="img-fluid" src="src/croissant.png" alt="Photo of croissant" />
       <br />
       <div class="d-flex justify-content-evenly">
         <a href="/index.html"> Home</a>
