--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
-    <title>Homepage - Croissant.com</title>
+    <title>Information about croissants - Croissant.com</title>
   </head>
   <body class="bg-success bg-opacity-25">
     <div class="container mt-5">
